--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,15 @@
         android:theme="@style/Theme.MontaigneApp"
         tools:targetApi="31">
         <activity
+            android:name=".ProjetoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".FuroActivity"
+            android:exported="false" />
+        <activity
+            android:name=".EnsaioActivity"
+            android:exported="false" />
+        <activity
             android:name=".CarimboDefinitivoActivity"
             android:exported="false" />
         <activity
