--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,24 +12,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MontaigneApp"
-        android:name="com.orm.SugarApp"tools:targetApi="31" tools:replace="android:icon">
+        android:name="com.orm.SugarApp"
+        tools:targetApi="31" tools:replace="android:icon">
         <activity
-            android:name=".ProjetoActivity"
+            android:name=".activity.spt.projeto.ProjetoActivity"
             android:exported="false" />
         <activity
-            android:name=".FuroActivity"
+            android:name=".activity.spt.furo.FuroActivity"
             android:exported="false" />
         <activity
-            android:name=".EnsaioActivity"
+            android:name=".activity.spt.ensaio.EnsaioActivity"
             android:exported="false" />
         <activity
-            android:name=".CarimboDefinitivoActivity"
+            android:name=".activity.carimboDefinitivo.CarimboDefinitivoActivity"
             android:exported="false" />
         <activity
-            android:name=".HomeActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
+            android:name=".activity.home.HomeActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.MontaigneApp.NoActionBar">
