Criação do SptActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.MontaigneApp"
         tools:targetApi="31">
         <activity
+            android:name=".SptActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.spt.carimboUnico.CarimboUnicoActivity"
             android:exported="false" />
         <activity
