--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,9 @@ android {
     buildFeatures {
         viewBinding true
     }
+    viewBinding {
+        enable = true
+    }
     namespace 'com.montaigne.montaigneapp'
 }
 
