--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             android:name=".ui.spt.carimboEnsaio.CarimboEnsaioFragment"
             android:exported="false" />
         <activity
-            android:name=".ui.spt.projeto.ProjetoActivity"
+            android:name=".ui.spt.projeto.ProjetoFragment"
             android:exported="false" />
         <activity
             android:name=".ui.spt.furo.FuroActivity"
