--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,8 +50,17 @@ dependencies {
     // firebase
     implementation 'com.google.firebase:firebase-database:20.0.5'
     implementation platform('com.google.firebase:firebase-bom:29.3.1')
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    // auth
+    implementation platform('com.google.firebase:firebase-bom:31.0.3')
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.android.gms:play-services-auth:20.3.0'
     // testing
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     testImplementation 'junit:junit:4.13.2'
+    // google-services
+    implementation 'com.google.gms:google-services:4.3.14'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+    apply plugin: 'com.google.gms.google-services'
 }
