--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,22 +14,28 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.spt.SptActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="userPortrait"/>
         <activity
             android:name=".ui.spt.carimboEnsaio.CarimboEnsaioFragment"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="userPortrait"/>
         <activity
             android:name=".ui.spt.projeto.ProjetoFragment"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="userPortrait"/>
         <activity
             android:name=".ui.spt.furo.FuroFragment"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="userPortrait"/>
         <activity
             android:name=".ui.spt.ensaio.EnsaioFragment"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="userPortrait"/>
         <activity
             android:name=".ui.spt.carimboProjeto.CarimboProjetoFragment"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="userPortrait"/>
         <activity
             android:name=".ui.home.HomeActivity"
             android:exported="true"
